# nfl-game

./: .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  season-22-23.csv  teams.json
game/: models.py  urls.py  views.py
game/migrations/: 0001_initial.py  0002_match_profile.py  0003_week_match_week.py  0004_remove_match_profile.py  0005_remove_season_profile.py
index/: urls.py  views.py
nfl/: asgi.py  settings.py  urls.py  wsgi.py
src/: manage.py
src/app/: context_processors.py  models.py  urls.py
src/app/migrations/: 0001_initial.py
src/app/views/: conference.py  index.py  user.py
src/game/: models.py  urls.py  views.py
src/game/migrations/: 0001_initial.py  0002_match_profile.py  0002_remove_match_team1_remove_match_team2_match_away_and_more.py  0003_week_match_week.py  (+2 more)
src/index/: urls.py  views.py
src/nfl/: asgi.py  settings.py  urls.py  wsgi.py
src/team/: context_processors.py  models.py  urls.py  views.py
src/templates/: account.html  conference_teams.html  conferences.html  generic.html  initial.html  login.html  teams.html
src/user/: models.py  urls.py  views.py
static/css/: me-styles.css  style.css
static/js/: main.js
team/: models.py  urls.py  views.py
team/migrations/: 0001_initial.py
templates/: account.html  base.html  conferences.html  dependencies.html  index.html  initial.html  login.html  teams.html
templates/components/: depedencies.html  footer.html  header.html
templates/pages/: home.html
user/: models.py
user/migrations/: 0001_initial.py  0002_teamprofile.py
(+46 files in other folders)
