[tool.poetry]
name = "nfl-game"
version = "0.1.0"
description = "A game inspired by the brasfoot game"
authors = ["Pedro Fonseca <contatopedrorn@gmail.com>"]
readme = "README.md"
packages = [{include = "nfl_game"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
psycopg2 = "^2.9.5"
djangorestframework = "^3.14.0"
pandas = "^1.5.3"
pillow = "^9.4.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
ruff = "^0.0.253"
pre-commit = "^3.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]

exclude = [
    "*/migrations/*",
    "venv",
    "settings.py",
    "__init__.py",
    "models.py"
]
